slider actualizado y costos de natacion tambien

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -634,8 +634,8 @@ video {
   grid-column-end: 4;
 }
 
-.col-end-3 {
-  grid-column-end: 3;
+.col-end-2 {
+  grid-column-end: 2;
 }
 
 .row-start-1 {
@@ -658,8 +658,21 @@ video {
   grid-row-end: 5;
 }
 
-.block {
-  display: block;
+.row-end-9 {
+  grid-row-end: 9;
+}
+
+.row-end-6 {
+  grid-row-end: 6;
+}
+
+.m-auto {
+  margin: auto;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .flex {
@@ -694,6 +707,10 @@ video {
   width: 100vw;
 }
 
+.w-11\/12 {
+  width: 91.666667%;
+}
+
 .translate-y-1\/2 {
   --tw-translate-y: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -703,8 +720,24 @@ video {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .grid-rows-custom {
   grid-template-rows: auto 10px auto auto;
+}
+
+.grid-rows-8 {
+  grid-template-rows: repeat(8, minmax(0, 1fr));
+}
+
+.grid-rows-5 {
+  grid-template-rows: repeat(5, minmax(0, 1fr));
+}
+
+.grid-rows-1 {
+  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -771,10 +804,6 @@ video {
   border-end-end-radius: 1.5rem;
 }
 
-.border-t {
-  border-top-width: 1px;
-}
-
 .bg-amarillo_catolica {
   --tw-bg-opacity: 1;
   background-color: rgb(244 218 64 / var(--tw-bg-opacity));
@@ -790,6 +819,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
 .bg-verde_catolica {
   --tw-bg-opacity: 1;
   background-color: rgb(54 162 188 / var(--tw-bg-opacity));
@@ -798,6 +832,16 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -850,10 +894,6 @@ video {
   font-family: clanpro_news, arial;
 }
 
-.font-helvetic {
-  font-family: helvetic, arial;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -862,6 +902,21 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .text-amarillo_catolica {
@@ -889,6 +944,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-verde_catolica {
+  --tw-text-opacity: 1;
+  color: rgb(54 162 188 / var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -905,6 +970,14 @@ video {
   opacity: 0.95;
 }
 
+.opacity-40 {
+  opacity: 0.4;
+}
+
+.opacity-30 {
+  opacity: 0.3;
+}
+
 .outline {
   outline-style: solid;
 }
@@ -913,16 +986,8 @@ video {
   outline-width: 1px;
 }
 
-.outline-amarillo_catolica {
-  outline-color: #F4DA40;
-}
-
 .outline-azul_catolica {
   outline-color: #1B5CFF;
-}
-
-.outline-verde_catolica {
-  outline-color: #36A2BC;
 }
 
 .transition {
@@ -1112,6 +1177,18 @@ video {
     margin-top: 1.75rem;
   }
 
+  .\33 20px\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .\33 20px\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
+  .\33 20px\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
   .\33 20px\:inline-block {
     display: inline-block;
   }
@@ -1204,6 +1281,10 @@ video {
     width: 100%;
   }
 
+  .\33 20px\:w-2\/4 {
+    width: 50%;
+  }
+
   .\33 20px\:-translate-x-1\/2 {
     --tw-translate-x: -50%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1250,6 +1331,10 @@ video {
     gap: 1.25rem;
   }
 
+  .\33 20px\:gap-4 {
+    gap: 1rem;
+  }
+
   .\33 20px\:rounded-full {
     border-radius: 9999px;
   }
@@ -1260,6 +1345,11 @@ video {
 
   .\33 20px\:rounded-md {
     border-radius: 0.375rem;
+  }
+
+  .\33 20px\:rounded-t-lg {
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
   }
 
   .\33 20px\:rounded-ee-3xl {
@@ -1377,6 +1467,10 @@ video {
     font-family: helvetic, arial;
   }
 
+  .\33 20px\:font-clanpro_news {
+    font-family: clanpro_news, arial;
+  }
+
   .\33 20px\:text-15px {
     font-size: 15px;
   }
@@ -1418,6 +1512,11 @@ video {
   .\33 20px\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
+  }
+
+  .\33 20px\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .\33 20px\:font-bold {
@@ -1498,18 +1597,39 @@ video {
     margin-right: 3.5rem;
   }
 
+  .\34 40px\:mt-9 {
+    margin-top: 2.25rem;
+  }
+
+  .\34 40px\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .\34 40px\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
   .\34 40px\:w-96 {
     width: 24rem;
   }
 }
 
 @media (min-width: 540px) {
+  .\35 40px\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .\35 40px\:ml-9 {
     margin-left: 2.25rem;
   }
 
   .\35 40px\:mr-9 {
     margin-right: 2.25rem;
+  }
+
+  .\35 40px\:mt-6 {
+    margin-top: 1.5rem;
   }
 
   .\35 40px\:w-5 {
@@ -1533,14 +1653,6 @@ video {
 
   .\37 00\:mr-2 {
     margin-right: 0.5rem;
-  }
-
-  .\37 00\:block {
-    display: block;
-  }
-
-  .\37 00\:hidden {
-    display: none;
   }
 
   .\37 00\:h-550px {
@@ -1578,6 +1690,18 @@ video {
 
   .\37 00\:text-start {
     text-align: start;
+  }
+}
+
+@media (min-width: 816px) {
+  .\38 16px\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .\38 16px\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 }
 
@@ -1691,6 +1815,10 @@ video {
     margin-right: auto;
   }
 
+  .\31 000px\:mt-0 {
+    margin-top: 0px;
+  }
+
   .\31 000px\:flex {
     display: flex;
   }
@@ -1800,6 +1928,32 @@ video {
   .\31 260px\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .\31 260px\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .\31 260px\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .\31 260px\:leading-3 {
+    line-height: .75rem;
+  }
+
+  .\31 260px\:leading-9 {
+    line-height: 2.25rem;
+  }
+
+  .\31 260px\:leading-loose {
+    line-height: 2;
+  }
+
+  .\31 260px\:leading-snug {
+    line-height: 1.375;
   }
 }
 
