--- a/styles/styles.css
+++ b/styles/styles.css
@@ -666,6 +666,10 @@ video {
   grid-row-end: 9;
 }
 
+.row-end-2 {
+  grid-row-end: 2;
+}
+
 .flex {
   display: flex;
 }
@@ -775,10 +779,6 @@ video {
   overflow-y: auto;
 }
 
-.rounded-3xl {
-  border-radius: 1.5rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -791,18 +791,9 @@ video {
   border-radius: 0.125rem;
 }
 
-.rounded-b-3xl {
-  border-bottom-right-radius: 1.5rem;
-  border-bottom-left-radius: 1.5rem;
-}
-
 .rounded-b-2xl {
   border-bottom-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
-}
-
-.rounded-ee-3xl {
-  border-end-end-radius: 1.5rem;
 }
 
 .bg-amarillo_catolica {
@@ -828,6 +819,26 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-hover_verde_catolica {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 184 211 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(202 138 4 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -914,10 +925,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.underline {
-  text-decoration-line: underline;
 }
 
 .opacity-50 {
@@ -1011,6 +1018,21 @@ video {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-green-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-hover_verde_catolica:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 184 211 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-yellow-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
 
 .hover\:text-black:hover {
@@ -1200,10 +1222,6 @@ video {
     width: 3.5rem;
   }
 
-  .\33 20px\:w-310px {
-    width: 310px;
-  }
-
   .\33 20px\:w-32 {
     width: 8rem;
   }
@@ -1226,6 +1244,10 @@ video {
 
   .\33 20px\:w-8 {
     width: 2rem;
+  }
+
+  .\33 20px\:w-80 {
+    width: 20rem;
   }
 
   .\33 20px\:w-full {
@@ -1282,6 +1304,10 @@ video {
     gap: 1.25rem;
   }
 
+  .\33 20px\:rounded-2xl {
+    border-radius: 1rem;
+  }
+
   .\33 20px\:rounded-full {
     border-radius: 9999px;
   }
@@ -1290,29 +1316,9 @@ video {
     border-radius: 0.5rem;
   }
 
-  .\33 20px\:rounded-md {
-    border-radius: 0.375rem;
-  }
-
-  .\33 20px\:rounded-3xl {
-    border-radius: 1.5rem;
-  }
-
-  .\33 20px\:rounded-2xl {
-    border-radius: 1rem;
-  }
-
   .\33 20px\:rounded-t-lg {
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
-  }
-
-  .\33 20px\:rounded-ee-3xl {
-    border-end-end-radius: 1.5rem;
-  }
-
-  .\33 20px\:rounded-ss-3xl {
-    border-start-start-radius: 1.5rem;
   }
 
   .\33 20px\:border {
@@ -1349,13 +1355,29 @@ video {
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 
+  .\33 20px\:bg-hover_verde_catolica {
+    --tw-bg-opacity: 1;
+    background-color: rgb(75 184 211 / var(--tw-bg-opacity));
+  }
+
+  .\33 20px\:bg-yellow-600 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(202 138 4 / var(--tw-bg-opacity));
+  }
+
+  .\33 20px\:bg-yellow-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+  }
+
+  .\33 20px\:bg-yellow-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+  }
+
   .\33 20px\:object-cover {
     -o-object-fit: cover;
        object-fit: cover;
-  }
-
-  .\33 20px\:p-4 {
-    padding: 1rem;
   }
 
   .\33 20px\:px-2 {
@@ -1475,8 +1497,14 @@ video {
     line-height: 1rem;
   }
 
-  .\33 20px\:font-bold {
-    font-weight: 700;
+  .\33 20px\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .\33 20px\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 
   .\33 20px\:leading-none {
@@ -1510,12 +1538,6 @@ video {
   .\33 20px\:shadow-lg {
     --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-
-  .\33 20px\:shadow-md {
-    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
@@ -1563,6 +1585,16 @@ video {
 
   .\34 40px\:w-96 {
     width: 24rem;
+  }
+
+  .\34 40px\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .\34 40px\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1703,12 +1735,32 @@ video {
     margin-right: auto;
   }
 
+  .\39 00px\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .\39 00px\:flex {
+    display: flex;
+  }
+
   .\39 00px\:hidden {
     display: none;
   }
 
   .\39 00px\:w-900px {
     width: 900px;
+  }
+
+  .\39 00px\:w-96 {
+    width: 24rem;
+  }
+
+  .\39 00px\:w-auto {
+    width: auto;
+  }
+
+  .\39 00px\:flex-row-reverse {
+    flex-direction: row-reverse;
   }
 
   .\39 00px\:text-3xl {
@@ -1754,28 +1806,24 @@ video {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+
+  .\39 40px\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 1000px) {
-  .\31 000px\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .\31 000px\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .\31 000px\:flex {
-    display: flex;
-  }
-
   .\31 000px\:h-48 {
     height: 12rem;
   }
 
   .\31 000px\:w-1000px {
     width: 1000px;
+  }
+
+  .\31 000px\:w-500px {
+    width: 500px;
   }
 
   .\31 000px\:w-56 {
@@ -1788,10 +1836,6 @@ video {
 
   .\31 000px\:w-96 {
     width: 24rem;
-  }
-
-  .\31 000px\:flex-row-reverse {
-    flex-direction: row-reverse;
   }
 
   .\31 000px\:text-2xl {
@@ -1848,6 +1892,11 @@ video {
 }
 
 @media (min-width: 1260px) {
+  .\31 260px\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .\31 260px\:mt-3 {
     margin-top: 0.75rem;
   }
@@ -1944,6 +1993,11 @@ video {
     font-size: 1rem;
     line-height: 1.5rem;
   }
+
+  .\31 360px\:text-9xl {
+    font-size: 8rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 1400px) {
@@ -1953,11 +2007,6 @@ video {
 
   .\31 400px\:right-8 {
     right: 2rem;
-  }
-
-  .\31 400px\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
   }
 
   .\31 400px\:h-48 {
@@ -2012,5 +2061,44 @@ video {
   .\31 600px\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+}
+
+@media (min-width: 1800px) {
+  .\31 800\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .\31 800\:w-full {
+    width: 100%;
+  }
+
+  .\31 800\:w-900px {
+    width: 900px;
+  }
+
+  .\31 800\:w-2\/4 {
+    width: 50%;
+  }
+
+  .\31 800\:w-3\/5 {
+    width: 60%;
+  }
+
+  .\31 800\:flex-row {
+    flex-direction: row;
+  }
+
+  .\31 800\:flex-row-reverse {
+    flex-direction: row-reverse;
+  }
+
+  .\31 800\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .\31 800\:gap-8 {
+    gap: 2rem;
   }
 }
